# silaeder-bioinfo

./: README.md
dna-parser/: .gitignore  Cargo.toml  file.txt  main.py  out.txt  run.sh  rust-dna.ipynb  test.fna
dna-parser/src/: lib.rs  main.rs
