[package]
name = "dna-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
csv = "1.1.6"
itertools = "0.10.4"
plotters = "0.3.4"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["serde_derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
